add post re how write metadata

--- a/index.org
+++ b/index.org
@@ -473,6 +473,97 @@ So I thought what's the other 10?  Here's a few contenders for my work:
 
 #+end_src
 
+*** 2013-11-06-what-do-scientists-who-write-metadata-use-to-do-it-and-why
+
+#+name:what-do-scientists-who-write-metadata-use-to-do-it-and-why-header
+#+begin_src markdown :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-11-06-what-do-scientists-who-write-metadata-use-to-do-it-and-why.md :exports none :eval no :padline no
+---
+name: what-do-scientists-who-write-metadata-use-to-do-it-and-why
+layout: post
+title: What Do Scientists Who Write Metadata Use To Do It? And Why?
+date: 2013-11-06
+categories:
+- Data Documentation
+---
+
+
+- The extent to which scientists write metadata is probably lower than it ought to be
+- The level of metadata written during science projects is probably described generally as 'bare-minimum' and "the minimum needed for one-self to come back to and understand what one did"
+- It sometimes seems that even the bare minimum for one-self is not being kept very often
+- I argue that the reasons for less-than-adequate metadata can be understood by looking at 
+- 1) the culture of the scienctists displinary background via training
+- 2) the tools available and 
+- 3) institutional  requirements to produce metadata (both about data or access to data)
+- In my ongoing [series of blog posts I am exploring the tools available](http://ivanhanigan.github.io/2013/10/two-main-types-of-data-documentation-workflow/).  
+- In this post I just wanted to start the discussion about discipline culture and institutional requirements.
+
+### Discipline Culture
+
+- I trained in Geography in the age of GIS and this community uses metadata a lot
+- Due to the prevalance of the digital map (collection of layers) which is a derivative data output
+- Need to know the source of all the layers
+- first law of GIS is "garbage in, garbage out" 
+- I was trained in the ANSLIC standard from the start
+- ArcGIS has a tool called ArcCatalog which makes metadata easy to create and view
+
+### Institutional Requirements
+
+- The ARC and NHMRC say they are going to require more metadata (and even data deposit)
+- Restrictions on data access make it necessary to describe at least the metadata around provision agreements, licence, allowable access
+- A supporting management level who value the metadata as research output (alongside a peer reviewed paper metadata pales in comparison)
+- My old boss used to say "Work Not Published Is Work Not Done".
+
+### This reminds me of Approaches and Barriers to Reproducible Research
+
+- In 2011 BiostatMatt (Matt Shotwell) published [a survey of biostatisticians](http://biostatmatt.com/uploads/shotwell-interface-2011.pdf)
+ VUMC Dept. of Biostatistics to assess:
+- the prevalence of fully scripted data analyses
+- the prevalence of literate programming practices
+
+To assess the perceived barriers to reproducible research the also asked:
+
+    What The biggest obstacle to always reproducibly scripting your work?
+
+<p></p>
+
+
+    | Barrier                                                  | Staff | Faculty |
+    |----------------------------------------------------------+-------+---------|
+    | No signifcant obstacles.                                 |     8 |      10 |
+    | I havent learned how.                                    |     0 |       0 |
+    | It takes more time.                                      |     7 |       7 |
+    | It makes collaboration difficult (eg. file compatibility)|     4 |       2 |
+    | The software I use doesnt facilitate reproducibility.    |     0 |       0 |
+    | Its not always necessary for my work to be reproducible. |     2 |       0 |
+    | Other                                                    |     2 |       1 |
+    |----------------------------------------------------------+-------+---------|
+
+### So what about the Approaches and Barriers to Me Writing Metadata?
+
+With a sample size of one I asked myself these questions:
+
+
+    | Q                                                  | A                                                                    |
+    |----------------------------------------------------+----------------------------------------------------------------------|
+    | Do I fully document data (to a metadata standard?) | Occasionally, using DDI for high value raw inputs and final products |
+    | Do I employ data documentation practices           | I use a tool I created to write minimal metadata occasionally        |
+    | What are the main barriers?                        | takes more time, The software doesnt facilitate, not always necessary|
+
+### Conclusions
+
+- The tools need to help write metadata
+- the Institution needs to require metadata
+- 
+
+### References
+
+- Shotwell, M.S. and Alvarez, J.M. 2011. Approaches and Barriers to Reproducible Practices in Biostatistics.
+http://biostatmatt.com/uploads/shotwell-interface-2011.pdf
+
+
+    
+#+end_src
+
 ** R-reml-and-rfigshare
 #+begin_src R :session *R* :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-10-12-data-documentation-case-study-reml-and-rfigshare.md :exports reports :eval no :padline no
   ---
@@ -998,7 +1089,7 @@ layout: post
 title: morpho-and-reml-boilerplate-streamline-the-process-of-metadata-entry
 date: 2013-10-29
 categories:
-- data documentation
+- Data Documentation
 ---
 
 
@@ -1397,6 +1488,24 @@ dir(<span style="color: #2aa198;">"data"</span>)
 </html>
 
 #+end_src
+** make-ddixml-and-ddiindex-and-orapus
+#+name:make-ddixml-and-ddiindex-and-orapus-header
+#+begin_src markdown :tangle ~/projects/ivanhanigan.github.com.raw/_drafts/2013-11-06-make-ddixml-and-ddiindex-and-orapus.md :exports none :eval no :padline no
+---
+name: make-ddixml-and-ddiindex-and-orapus
+layout: post
+title: make-ddixml-and-ddiindex-and-orapus
+date: 2013-11-06
+categories:
+- Data Documentation
+---
+
+ make_ddixml-and-ddiindex-and-orapus
+
+#### R Code:make-ddixml-and-ddiindex-and-orapus
+    
+#+end_src
+
 ** COMMENT TODO R-spss-variable-labels-create
 #+name:R-spss-variable-labels
 #+begin_src R :session *R* :tangle no :exports reports :eval no
