add the spss_sum

--- a/index.org
+++ b/index.org
@@ -1752,12 +1752,16 @@ categories:
 #+begin_src R :session *R* :tangle no :exports reports :eval no
   ################################################################
   # name:test-spss_variable_labels_read
-  require(disentangle)   
+  require(disentangle)
+  fpath <- system.file("extdata/civst_gend_sector.csv",package = "disentangle")
+  fpath
+  civst_gend_sector <- read.csv(fpath)
+  str(civst_gend_sector)
   # test
   qc <- spss_variable_labels_read(
     x = civst_gend_sector
     ,
-    filter = "person"
+    filter = "number_of_cases"
     ,
     case_sensitive  = TRUE
     ,
@@ -1862,6 +1866,64 @@ categories:
 
 #+RESULTS: tableCode
 
+** R-spss_summary
+*** R-R-spss_summary
+#+name:R-spss_summary
+#+begin_src R :session *R* :tangle R/spss_summary.r :exports none :eval no
+  # name:spss_summary
+  spss_summary <- function(dataframe, variable)
+  {
+    summa  <- summary(dataframe[,variable])
+    summa  <- as.data.frame(cbind(
+        c(variable, rep("", length(summa) - 1)),
+        names(summa), summa))
+    summa[,1]  <- as.character(summa[,1])
+    summa[,2]  <- as.character(summa[,2])
+    if(is.numeric(dataframe[,variable])){
+    summa$cnt <- NA
+    summa$pct  <- NA
+    } else {
+  
+    summa$summa  <- as.numeric(as.character(summa$summa))  
+    summa$summa2 <- rep("", nrow(summa))
+        # as.numeric(as.character(summa$V2)) ?
+    summa$pct  <- round((summa$summa / sum(summa$summa)) * 100, 2)
+    summa <- summa[,c(1,2,4,3,5)]
+    if(nrow(summa) > 10){
+        summa <- summa[1:10,]  
+    summa <- rbind(summa, c("", "more than 10 levels. remainder suppressed..", "","", ""))
+    }
+    }
+    names(summa)  <- c("Variable","Attributes", "Value", "Count", "Percent")
+  #summa
+    return(summa)
+  }
+  
+#+end_src
+*** test-R-spss_summary
+#+name:R-spss_summary
+#+begin_src R :session *R* :tangle no :exports none :eval no
+  ################################################################
+  # name:R-spss_summary
+  require(disentangle)
+  fpath <- system.file("extdata/civst_gend_sector.csv", package = "disentangle")
+  fpath
+  civst_gend_sector <- read.csv(fpath)
+  out <- matrix(NA, nrow = 0, ncol = 3)
+  for(i in 1:ncol(civst_gend_sector)){
+  out2 <- spss_summary(civst_gend_sector, names(civst_gend_sector)[i])
+  out <- rbind(out, out2)
+  }
+  out
+  
+#+end_src
+*** man-R-spss_summary
+#+name:R-spss_summary
+#+begin_src R :session *R* :tangle no :exports none :eval no
+################################################################
+# name:R-spss_summary
+
+#+end_src
 
 * Exploratory Data Analysis
 * General Purpose
