--- a/index.org
+++ b/index.org
@@ -2818,6 +2818,32 @@ source("tests/test-tree.chisq.r")
 
 * Graphical User Interfaces
 * Version Control
+** 2013-11-19-git-can-be-simple-or-very-complicated
+#+name:git-can-be-simple-or-very-complicated-header
+#+begin_src markdown :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-11-19-git-can-be-simple-or-very-complicated.md :exports none :eval no :padline no
+---
+name: 2013-11-19-git-can-be-simple-or-very-complicated
+layout: post
+title: git-can-be-simple-or-very-complicated
+date: 2013-11-19
+categories:
+- research methods
+---
+    
+- Git is a Distributed Version Control System.
+- The [centerforopenscience.org](centerforopenscience.org) has developed the Open Science Framework  which is they say "a simplified front end to the powerful and popular version control system Git".
+- I use Github a lot for extending the local features into an online space
+- So I finally got around to poking the open science framework with the [Hutchinson Drought Index project](https://openscienceframework.org/project/pyts3/)
+- It turns out to be too simplified, and not have very many of the feature I love about Git and GitHub :-(
+- For eg it is not really distributed in that you don't get to sync your local repo with the onlin version
+- you upload a script or dataset, then you continue editing locally until you want to commit and then you have to upload again, one file at a time with the GUI rather than "git add ." and "git push".
+- I recommend having a look, it might work for you, but if you want more power checkout Yihui's suggestions for using github [http://yihui.name/en/2011/12/how-to-become-an-efficient-and-collaborative-r-programmer/]](http://yihui.name/en/2011/12/how-to-become-an-efficient-and-collaborative-r-programmer/)
+- and [http://yihui.name/en/2013/06/fix-typo-in-documentation/](http://yihui.name/en/2013/06/fix-typo-in-documentation/)
+
+#### In general I don't think simple front-end's should be a barrier to accessing a sophisticated back-end!
+
+#+end_src
+
 * Latex/Sweave
 * R Packages
 * Project Management
